Update File Directory Structure

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,37 +1,1 @@
-## 👋 Welcome
-
-Hey there, and welcome to **30 Days of Solidity** – the ultimate guide to becoming a smart contract development ninja in just one month! I'm Vedant, your friendly guide who's here to help you get started on your journey.
-
----
-
-![Kick-off](https://img.freepik.com/free-vector/spaceship-take-off-from-alien-planet-shuttle_107791-14442.jpg?w=1280&h=720)
-
----
-
-Really excited to have you on board. Before we get started, here are a few action items for you to take care of:
-
-1. **Set up your development environment** - You'll need a few tools and resources to get started, so take a few moments to ensure you have everything you need. We'll cover the specifics in the next few days, so don't worry too much if you're not quite sure what you need just yet.
-2. **Join the community** - You're not alone in this journey, and we're here to support you every step of the way. Whether you have questions, need help, or just want to connect with fellow Solidity enthusiasts, our community is here to help. Join us on Discord or follow us on Twitter to stay up-to-date on the latest news and developments.
-3. **Make a commitment** - Learning Solidity and smart contract development isn't easy, but it's definitely worth the effort. We encourage you to make a commitment to stick with this course for the next 30 days. You'll be amazed at what you can accomplish in just a short amount of time!
-
----
-
-## 🤔 What do you need?
-
-All you need to get started is a laptop and an internet connection. We'll provide all the resources and guidance you need to succeed, regardless of your background or experience level. We want to create a welcoming, friendly environment for all learners, and that's why we've designed this course to be accessible to anyone, regardless of their prior knowledge of Solidity.
-
-## 🤘 See an issue?
-
-We believe in the power of open-source collaboration and welcome contributions from anyone. If you see an issue with the course materials or have an idea for how we can improve, don't be shy – open a pull request on our [GitHub](https://github.com/Envoy-VC/30-Days-of-Solidity) repository and help us make this course even better!
-
-Let's get you some open-source rep!!!
-
-At the very least, drop a ⭐ on the repo if you're feeling fancy!
-
-## 🤚 How to get help
-
-We understand that learning Solidity can be challenging, but don't worry – we're here to help. If you have any questions, encounter any issues, or just need some extra motivation, feel free to reach out to us on Discord or Twitter. We're always happy to chat and help you out.
-
-So let's get started and embark on this exciting journey together. We promise it'll be a wild ride, full of learning, growth, and (hopefully) a bit of fun. Good luck, and let's become Solidity ninjas!
-
----
+## hello
