Move constants to root

--- a/pages/30-days-of-solidity/start.mdx
+++ b/pages/30-days-of-solidity/start.mdx
@@ -1,6 +1,6 @@
 ## 🧭 Navigation
 
 import { NavigationCards } from "/components";
-import { days } from "./constants";
+import { days } from "constants/constants";
 
 <NavigationCards elements={days} />
