Add Tailwind CSS

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,1 +1,5 @@
-## hello
+import "../styles/index.css";
+
+<div className="max-w-[1400px] mx-auto text-[64px] border-2 border-[#fff]">
+  Hello
+</div>
