--- a/pages/30-days-of-solidity/start/layout-of-solidity-file.mdx
+++ b/pages/30-days-of-solidity/start/layout-of-solidity-file.mdx
@@ -2,7 +2,7 @@ import "styles/index.css";
 
 <div className="text-[36px]">👋 Hello</div>
 
-Let's start our journey with Solidity 🚀! In this article, we'll be diving into the layout of a Solidity source file. 💻 Solidity has a specific structure that you need to follow in order for your code to compile correctly. We'll be breaking down each part of a Solidity source file and discussing how to properly structure your code. So, let's get started with another exciting adventure in Solidity! 🤩
+Let's start our journey with Solidity 🚀! Today we'll be diving into the layout of a Solidity source file. 💻 Solidity has a specific structure that you need to follow in order for your code to compile correctly. We'll be breaking down each part of a Solidity source file and discussing how to properly structure your code. So, let's get started with another exciting adventure in Solidity! 🤩
 
 Here is a basic layout of a Solidity source file-
 
@@ -119,7 +119,7 @@ So, that's all for now on importing other Solidity files! 🚀
 
 ## 📝 Comments
 
-Comments are used to describe your code to other developers. They're not executed by the compiler, so you can write anything you want in them. However, comments can help make your code more readable and easier to understand. There are two types of comments in Solidity: single-line and multi-line comments.
+Comments are used to describe your code to other developers. They're not executed by the compiler, so you can write anything you want in them. However, comments can help make your code more readable and easier to understand. There are three types of comments in Solidity: single-line, multi-line and NatSpec comments.
 
 ### 👨‍💻 Types of comments
 
@@ -153,13 +153,9 @@ Comments are used to describe your code to other developers. They're not execute
 
 ## 📚 Further Readings
 
-Congratulations 🥳, you've made it through this article and now have a better understanding of Solidity and some of its features! However, there is always more to learn and explore. Here are some resources for you to check out if you're interested in diving deeper:
+Congratulations 🥳, you've made it through and now have a better understanding of Solidity and some of its features! However, there is always more to learn and explore. Here are some resources for you to check out if you're interested in diving deeper:
 
 - [Solidity Documentation](https://docs.soliditylang.org/en/v0.8.19/index.html) - This is the official documentation for Solidity and provides a comprehensive guide to the language. It covers everything from basic syntax to advanced features, and includes examples and best practices.
 - [SMT Checkers](https://fv.ethereum.org/2021/12/01/smtchecker-dapptools/) and [Formal Verification](https://docs.soliditylang.org/en/v0.8.19/smtchecker.html#formal-verification) - Solidity has tools called SMT (`Satisfiability Modulo Theories`) checkers that can verify the correctness of smart contracts by using mathematical models to check if they satisfy certain properties.
 
 These resources will help you expand your knowledge and skills in Solidity development. Remember, the more you learn, the more you can contribute to the community and build amazing decentralized applications! 🚀
-
-```
-
-```
