--- a/pages/30-days-of-solidity/index.mdx
+++ b/pages/30-days-of-solidity/index.mdx
@@ -1,6 +1,6 @@
 ## 👋 Welcome
 
-Hey there, and welcome to **30 Days of Solidity** – the ultimate guide to becoming a smart contract development ninja in just one month! I'm Vedant, your friendly guide who's here to help you get started on your journey.
+Hey there, and welcome to **30 Days of Solidity** – the ultimate guide to becoming a smart contract development ninja 🥷 in just one month 😱! I'm Vedant, your friendly guide who's here to help you get started on your journey.
 
 ---
 
@@ -10,7 +10,7 @@ Hey there, and welcome to **30 Days of Solidity** – the ultimate guide to beco
 
 Really excited to have you on board. Before we get started, here are a few action items for you to take care of:
 
-1. **Set up your development environment** - You'll need a few tools and resources to get started, so take a few moments to ensure you have everything you need. We'll cover the specifics in the next few days, so don't worry too much if you're not quite sure what you need just yet.
+1. **Set up your development environment** - You'll need a few tools and resources to get started, so take a few moments to ensure you have everything you need. We'll cover the specifics in the next few tutorials, so don't worry too much if you're not quite sure what you need just yet.
 2. **Join the community** - You're not alone in this journey, and we're here to support you every step of the way. Whether you have questions, need help, or just want to connect with fellow Solidity enthusiasts, our community is here to help. Join us on Discord or follow us on Twitter to stay up-to-date on the latest news and developments.
 3. **Make a commitment** - Learning Solidity and smart contract development isn't easy, but it's definitely worth the effort. We encourage you to make a commitment to stick with this course for the next 30 days. You'll be amazed at what you can accomplish in just a short amount of time!
 
@@ -20,18 +20,75 @@ Really excited to have you on board. Before we get started, here are a few actio
 
 All you need to get started is a laptop and an internet connection. We'll provide all the resources and guidance you need to succeed, regardless of your background or experience level. We want to create a welcoming, friendly environment for all learners, and that's why we've designed this course to be accessible to anyone, regardless of their prior knowledge of Solidity.
 
+## 🤚 How to get help
+
+Getting stuck is a common experience in programming, and Solidity is no exception. But don't worry, there are plenty of resources available to help you out. Here are some tips on how to get help when you encounter difficulties in your Solidity coding journey:
+
+- **Do Your Own Research (DYOR)** 🤓 -
+  When you encounter a problem, the first thing you should do is try to solve it on your own. The internet is full of resources that can help you find a solution. Check out official Solidity documentation, Ethereum forums, and blogs for tutorials and guides. Often, the answer to your problem is just a Google search away! 🔍💻
+
+- **Search on StackOverflow** 👀 -
+  StackOverflow is a great resource for programmers. It's a community-driven platform where you can post your questions and get answers from experienced developers. Chances are, someone has already asked a similar question and received an answer. You can also browse through existing answers to see if any of them solve your problem. 👨‍💻🤝
+
+- **Join a Solidity Community** 👥 -
+  There are many Solidity communities online, including Reddit groups, Discord servers, and Telegram groups. These communities are a great way to connect with other developers and get help from them 👨‍👩‍👧‍👦. You can ask questions, share your code, and get feedback from others. Plus, you can also learn from other people's questions and answers. 🤝💬
+
 ## 🤘 See an issue?
 
-We believe in the power of open-source collaboration and welcome contributions from anyone. If you see an issue with the course materials or have an idea for how we can improve, don't be shy – open a pull request on our [GitHub](https://github.com/Envoy-VC/30-Days-of-Solidity) repository and help us make this course even better!
+We believe in the power of open-source collaboration and welcome contributions from anyone. If you see an issue with the course materials or have an idea for how we can improve, don't be shy – open a pull request on the [GitHub](https://github.com/Envoy-VC/guides) repository and help make this course even better!
 
 Let's get you some open-source rep!!!
 
 At the very least, drop a ⭐ on the repo if you're feeling fancy!
 
-## 🤚 How to get help
+## 🎉 I have completed the course, What's Next?
 
-We understand that learning Solidity can be challenging, but don't worry – we're here to help. If you have any questions, encounter any issues, or just need some extra motivation, feel free to reach out to us on Discord or Twitter. We're always happy to chat and help you out.
+Congratulations on completing your 30 Days of Solidity course! But what can you do with this new knowledge? Here are some ideas to help you take the next step in your Solidity journey. 🚀
 
-So let's get started and embark on this exciting journey together. We promise it'll be a wild ride, full of learning, growth, and (hopefully) a bit of fun. Good luck, and let's become Solidity ninjas!
+- **Build the next ERC Standard** 🏗️ -
+  Now that you have a good understanding of Solidity, why not put your knowledge into practice by building your own smart contract standard? You could create a decentralized application (dApp) or a new type of token. The possibilities are endless!
+
+  <br />
+
+- **Contribute to an Open-Source Project** 🤝 -
+  There are many open-source Solidity projects out there that could use your help. You could contribute code, write documentation, or help with testing. Contributing to an open-source project is a great way to build your skills and make new connections in the Solidity community.
+
+  <br />
+
+- **Participate in a Hackathon** 🤖 -
+  Hackathons are events where developers come together to build new projects in a short amount of time. Participating in a Solidity hackathon, such as ETHGlobal or others around the world, is a great way to put your skills to the test and learn from other developers. Plus, you might even win a prize! 🏆
+
+  <br />
+
+- **Apply to New Job Positions** 💼 -
+  If you're interested in pursuing a career in Solidity development, why not apply to some new job positions? Many companies are looking for Solidity developers, and with your newfound knowledge, you might be the perfect candidate.
+
+  <br />
+
+- **Join DAOs like Developer DAO** 🌐 -
+  DAOs, or decentralized autonomous organizations, are becoming increasingly popular in the blockchain space. Joining a DAO like Developer DAO is a great way to connect with other Solidity developers, collaborate on new projects, and build your skills.
+
+  <br />
+
+- **Start Your Own Solidity Project** 🌟 -
+  If you have an idea for a Solidity project, why not start your own? You could create a new dApp, a decentralized finance (DeFi) platform, or a new type of blockchain-based game. Starting your own project is a great way to build your skills and create something that you're passionate about.
+
+  <br />
+
+- **Continue Learning** 📚 -
+  Learning is a lifelong journey, and there's always more to discover in the world of Solidity. You could continue your education by taking more advanced Solidity courses, attending conferences, or following Solidity developers on social media. Who knows what you'll learn next! 📖
+
+Remember, the end of your 30 Days of Solidity course is just the beginning of your Solidity journey. There are many opportunities out there to continue learning and building your skills. Good luck, and happy coding! 💻👨‍💻👩‍💻🚀
+
+<br />
+
+---
+
+<img
+  src="https://media.tenor.com/r3XdvPsAV3kAAAAC/despicable-me-minions.gif"
+  width="800px"
+/>
+
+So let's get started and embark on this exciting journey together. We promise it'll be a wild ride 🎢, full of learning, growth, and (hopefully) a bit of fun. Good luck, and let's become Solidity ninjas 🥷!
 
 ---
