Add New Article on Getting Started with Polygon

--- a/pages/polygon-deep-dive/index.mdx
+++ b/pages/polygon-deep-dive/index.mdx
@@ -8,7 +8,7 @@ Well, let's start with the problem it solves. You see, there's this popular bloc
 
 Just take a look at the list of big-name companies that have already implemented Polygon, including Reddit and Lens Protocol. Reddit has onboard more than 6 million users into the web3 space via their NFTs, like the Superbowl Collection, CryptoSnoos collection and Reddit avatar NFTs. Lens Protocol, a decentralized social graph, is empowering many decentralized social media applications. These companies are just a few of the many that are leveraging the power of Polygon to create new and exciting use cases for blockchain technology.
 
-But how did Polygon become the blockchain for mass adoption? Well, it's a story of perseverance, innovation, and a little bit of luck. In this article series, we'll take you on a journey through the realm of Polygon and show you how it's making the world a better place, one transaction at a time. So grab your oxygen tanks 🐠, an extra pair of Diving Masks 🤿, and let's explore how Polygon is making the world a better place! 🌎
+But how did Polygon become the blockchain for mass adoption? Well, it's a story of perseverance, innovation, and a little bit of luck. In this article series, we'll take you on a journey through the realm of Polygon and show you how it's making the world a better place, one transaction at a time. So grab your oxygen tanks 🐠, an extra pair of Diving Masks 🤿, and let's explore how Polygon is ...
 
 ![Making World a Better Place](assets/polygon-deep-dive/making-world.jpg)
 
