--- a/pages/polygon-deep-dive/getting-started-with-polygon.mdx
+++ b/pages/polygon-deep-dive/getting-started-with-polygon.mdx
@@ -30,12 +30,53 @@ One of Polygon's most significant sustainability initiatives is its carbon-negat
 
 Polygon is partnering with **KlimaDAO**, a decentralized collective of environmentalists, developers, and entrepreneurs, to purchase the credits via KlimaDAO's on-chain carbon market, Klima Infinity, and retire them using its offset aggregator decentralized app. The partnership with KlimaDAO has been instrumental in facilitating the nascent on-chain carbon market and supporting the broader blockchain industry's transition to a more sustainable future.
 
+![Going Green with Polygon](assets/polygon-deep-dive/going-green-polygon.webp)
+
 Another initiative by Polygon is the Green Blockchain Summit, a virtual forum for Web3 leaders to develop solutions to the most urgent environmental problems facing the blockchain industry. The event will bring together founders, operators, investors, academics, and more across Web3 and beyond with discussions ranging from on-chain carbon credits and NFTs to climate narratives and lessons from other industries. By fostering collaboration and education around sustainable solutions, the Green Blockchain Summit hopes to drive progress towards a more environmentally conscious blockchain industry.
 
 Polygon has also become a premier destination for regenerative finance (ReFi) activity, which aims to approach wicked environmental problems by making negative externalities legible to markets and marrying social objectives with economic incentives through technological fixes. Some of the earliest adopters of ReFi building on Polygon brought carbon offsets on-chain, including KlimaDAO with partners Moss, the Toucan Protocol, and C3, who tokenized more than 25 million tonnes of credits in just over six months.
+
+import Image from "next/image";
+import tweet from "assets/polygon-deep-dive/tweet-polygon-goes-green.png";
+
+<a
+  href="https://twitter.com/0xPolygon/status/1513907792117403649"
+  target="_blank"
+  rel="noopener noreferrer"
+>
+  <Image src={tweet} width={500} height={500} alt="Tweet Polygon goes green" />
+</a>
 
 The Merge, Ethereum's transition to the proof of stake (PoS) consensus, was also a significant milestone for the Polygon network in 2022. The transition wiped out 60,000 tonnes of Polygon's carbon footprint, making the already carbon-neutral network even more sustainable and on the path to carbon-negative, as expressed in their green manifesto.
 
 Polygon's sustainability efforts showcase its commitment to creating a more environmentally conscious blockchain industry. By taking a multi-faceted approach, including partnerships, education, and technological fixes, Polygon is paving the way for a more sustainable future for the entire blockchain ecosystem.
 
+## Polygon Edge
 
+Polygon Edge is a **flexible** and **scalable** framework that allows developers to create their own Ethereum-compatible blockchain networks quickly. One of the key features that make Polygon Edge stand out is its compatibility with Ethereum smart contracts, which makes it easy for developers to create blockchain networks with customizable features.
+
+The framework is designed to be **modular**, **extensible**, and **efficient** in bridging public to permissioned networks, making it ideal for creating DApps. Moreover, Polygon Edge offers a developer-friendly plugin system that allows developers to create plugins rather than forking, which makes the development process faster and more efficient.
+
+Another key feature of Polygon Edge is its ability to go beyond Ethereum's smart contracts with Runtime plugins. These plugins enable developers to customize the main functionalities of the blockchain network, giving them the flexibility to create a blockchain that meets their specific needs.
+
+Polygon Edge makes use of a unique consensus mechanism known as `IBFT`, which supports two forms: Proof-of-Authority (`PoA`) and Proof-of-Stake (`PoS`). PoA is the default consensus mechanism, where validators are responsible for creating and adding blocks to the blockchain. The validators form a dynamic validator set, where a voting mechanism enables adding or removing validators from the set.
+
+This process helps identify and remove malicious validators from the network while adding new trusted validators. The framework also supports communication across a myriad of varied blockchain networks, which makes it easy for developers to create interoperable DApps.
+
+JSON-RPC endpoints serve as the mediator for industry-standard wallets to interact with the Polygon Edge. This allows node operators to perform actions on the nodes through the gRPC protocol, which is a fast and efficient way of transmitting data between nodes.
+
+Polygon Edge offers several modules to developers that they can customize depending on their needs.
+
+- **Blockchain module**: It represents the blockchain layer responsible for coordinating everything in the Polygon Edge system
+- **Minimal module**: It acts as a primary hub for all the services on Polygon Edge.
+- **The Networking (`GRPC`) layer**: It handles operator interactions and is keen on running transmissions between nodes on the chain.
+- **TxPool module**: It depicts the transaction pool, which pools the transactions from multiple system points.
+- **JSON RPC module**: It is an API layer that developers use to establish communication with the blockchain
+- **Consensus module**: It provides developers with `IBFT` Proof-of-Authority or Proof-of-Stake consensus engines
+- **Libp2p module**: It is fast, flexible, and extensible, providing the ground for the principal network layer.
+
+![Polygon Edge Modules](assets/polygon-deep-dive/polygon-edge-modules.svg)
+
+Apart from these modules, developers can also use other modules in the plugin system, such as Storage, Types, Syncer, Sealer, etc., to build standalone chains for their specific use cases.
+
+---
